// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Sider 1`] = `mocked`;

exports[`Mock render - default - value[0] - Sider 2`] = `
Array [
  Array [
    Object {
      "breakpoint": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "{\\"style\\":[{\\"overflow\\":\\"auto\\"},null]} hide-on-print",
      "collapsed": false,
      "collapsedWidth": undefined,
      "collapsible": undefined,
      "id": "default",
      "onBreakpoint": [Function],
      "reverseArrow": undefined,
      "theme": undefined,
      "width": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.theme - value[0] - Sider 1`] = `mocked`;

exports[`Mock render - properties.theme - value[0] - Sider 2`] = `
Array [
  Array [
    Object {
      "breakpoint": undefined,
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "{\\"style\\":[{\\"overflow\\":\\"auto\\"},null]} hide-on-print",
      "collapsed": false,
      "collapsedWidth": undefined,
      "collapsible": undefined,
      "id": "properties.theme",
      "onBreakpoint": [Function],
      "reverseArrow": undefined,
      "theme": "dark",
      "width": undefined,
    },
    Object {},
  ],
]
`;
